Enhance app.js by initializing UI components and restructuring the main function for better organization. Update index.html to include new UI buttons for point selection, and modify geojson.js to set zIndex for point entities, improving data visibility.

--- a/study/index.html
+++ b/study/index.html
@@ -7,8 +7,20 @@
   <link href="https://cesium.com/downloads/cesiumjs/releases/1.134/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
+  <div id="button-container">
+    <button id="point-button">Point</button>
+    <button id="line-button">Line</button>
+    <button id="multi-line-button">Multi Line</button>
+  </div>
+  <div id="point-selection-container" style="display: none; margin-top: 10px;">
+    <h3>Pointデータを選択してください：</h3>
+    <button id="landmark-button">ランドマーク</button>
+    <button id="park-button">公園</button>
+    <button id="shelter-button">避難所</button>
+    <button id="station-button">駅</button>
+    <button id="all-points-button">すべてのPoint</button>
+  </div>
   <div id="cesiumContainer"></div>
   <script type="module" src="app.js"></script>
- </div>
 </body>
 </html>
